Reformulação do sistema de navegação, método de carregamento das informações, adição do login e registo e implementação de DataStore com injetor de dependências
O registo ainda não tem utilização prática, também foi adicionada reatividade no TextField do Rating, e um contador de palavras

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="your_critics">Suas Críticas</string>
     <string name="error_image">Erro ao carregar imagem</string>
     <string name="comments">Comentários</string>
+    <string name="content_description_toilet_image">Imagem da casa de banho</string>\
+    <string name="maps_uri">android-app://com.google.android.apps.maps</string>
 </resources>
