Melhorias na navegação, ajustes na tela de login e opção de logout adicionada

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="your_critics">Suas Críticas</string>
     <string name="error_image">Erro ao carregar imagem</string>
     <string name="comments">Comentários</string>
-    <string name="content_description_toilet_image">Imagem da casa de banho</string>\
+    <string name="content_description_toilet_image">Imagem da casa de banho</string>
     <string name="maps_uri">android-app://com.google.android.apps.maps</string>
+    <string name="login">Login</string>
+    <string name="register">Registo</string>
 </resources>
