Adicionada funcionalidade de reações a comentários
Mais especificamente reações de like e dislike

--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,35 +1,40 @@
 <resources>
+    <!-- App -->
     <string name="app_name" translatable="false">Think Toilet</string>
+
+    <!-- Rotas -->
     <string name="home">Home</string>
     <string name="history">Histórico</string>
     <string name="profile">Perfil</string>
-    <string name="go_to_maps">Ir para o Maps</string>
     <string name="rate">Avaliar</string>
-    <string name="report">Denunciar</string>
-    <string name="reportComment">Denunciar Comentário</string>
-    <string name="reportToilet">Denunciar\nCasa de Banho</string>
+    <string name="login">Login</string>
+    <string name="register">Registo</string>
+
+    <!-- Botões -->
+    <string name="go_to_maps">Ir para o Maps</string>
+    <string name="edit_profile">Editar Perfil</string>
+
+    <!-- Avaliação -->
     <string name="clean">Limpeza</string>
     <string name="paper">Papel</string>
     <string name="structure">Estrutura</string>
     <string name="accessibility">Acessibilidade</string>
-    <string name="rates">Avaliações</string>
-    <string name="edit_profile">Editar Perfil</string>
+
+    <!-- Perfil -->
+    <string name="level">Nível</string>
     <string name="points">Pontos</string>
     <string name="progress">Progresso</string>
-    <string name="level">Nível</string>
     <string name="your_critics">Suas Críticas</string>
-    <string name="error_image">Erro ao carregar imagem</string>
+
+    <!-- Comentário -->
     <string name="comments">Comentários</string>
+
+    <!-- Content Descriptions -->
     <string name="content_description_toilet_image">Imagem da casa de banho</string>
+
+    <!-- Erros -->
+    <string name="error_image">Erro ao carregar imagem</string>
+
+    <!-- Links -->
     <string name="maps_uri">android-app://com.google.android.apps.maps</string>
-    <string name="login">Login</string>
-    <string name="register">Registo</string>
-    <string name="suggestionToilet">Sugestão de Casa de Banho</string>
-    <string name="toiletName">Nome do Estabelecimento</string>
-    <string name="toiletAddress">Morada</string>
-    <string name="toiletCity">Cidade</string>
-    <string name="toiletCountry">País ou Estado</string>
-    <string name="toiletPostalCode">Código Postal</string>
-    <string name="toiletSuggestionToiletButton">Sugerir Casa de Banho</string>
-    <string name="commentToilet">Avaliações</string>
 </resources>
