Adicionada funcionalidade de denúncia de comentários e casas de banho
Teve outras alterações importantes, como a adição de uma nova coluna as tabelas fracas, que auxilia na identificação das linhas em código.
Além disso, também foi aprimorada a busca por casas de banho, e adicionada a tão aguardada funcionalidade de paginação das casas por parte do cliente.
Ainda falta a tela de confirmação das denúncias para finalizar essa parte totalmente.
Grande parte da aplicação encontra-se agora traduzida para português e inglês, além de outras melhorias visuais como a inserção de novos ícones.

--- a/app/app/src/main/res/values-pt/strings.xml
+++ b/app/app/src/main/res/values-pt/strings.xml
@@ -5,6 +5,8 @@
     <string name="rate">Avaliar</string>
     <string name="login">Login</string>
     <string name="register">Registo</string>
+    <string name="suggest">Sugestão - Casa de Banho</string>
+    <string name="report">Denúncia</string>
     <string name="go_to_maps">Ir para o Maps</string>
     <string name="edit_profile">Editar Perfil</string>
     <string name="clean">Limpeza</string>
@@ -14,7 +16,27 @@
     <string name="level">Nível</string>
     <string name="points">Pontos</string>
     <string name="progress">Progresso</string>
-    <string name="your_critics">Suas Critícas</string>
+    <string name="your_critics">Suas Críticas</string>
+    <string name="toilet_name">Nome</string>
+    <string name="toilet_city">Cidade</string>
+    <string name="toilet_country">País</string>
+    <string name="toilet_address">Endereço</string>
+    <string name="toilet_postal_code">Código Postal</string>
+    <string name="report_why_toilet">Porque estás a denunciar esta casa de banho?</string>
+    <string name="report_why_comment">Porque estás a denunciar este comentário?</string>
+    <string name="report_anoymous">A tua denúncia é anônima.</string>
+    <string name="report_fake_information">Informação Falsa</string>
+    <string name="report_unsanitary_conditions">Condições Insalubres</string>
+    <string name="report_privacy_violation">Invasão de Privacidade</string>
+    <string name="report_maintenance_needed">Manutenção Necessária</string>
+    <string name="report_damaged_equipment">Instalações Quebradas</string>
+    <string name="report_others">Outros</string>
+    <string name="reaction_not_useful">Não é Útil</string>
+    <string name="reaction_fake_information">Informação Falsa</string>
+    <string name="reaction_inappropriate_content">Conteúdo Inapropriado</string>
+    <string name="reaction_offensive_content">Conteúdo Ofensivo</string>
+    <string name="reaction_spam">Spam</string>
+    <string name="reaction_others">Outros</string>
     <string name="comments">Comentários</string>
     <string name="content_description_toilet_image">Imagem da casa de banho</string>
     <string name="content_description_profile_picture">Imagem do perfil</string>
@@ -38,6 +60,8 @@
     <string name="content_description_change_email_button">Botão para alterar e-mail</string>
     <string name="content_description_change_password_button">Botão para alterar palavra-passe</string>
     <string name="logo">Logo da aplicação</string>
+    <string name="suggest_toilet">Sugerir</string>
+    <string name="load_more">Carregar Mais</string>
     <string name="login_action">Iniciar Sessão</string>
     <string name="register_action">Registar</string>
     <string name="error_login">Erro ao iniciar sessão</string>
@@ -55,6 +79,17 @@
     <string name="error_passwords_do_not_match">As palavras-passe não coincidem</string>
     <string name="error_in_use_email">E-mail em uso</string>
     <string name="comment">Comentar</string>
-    <string name="insert_comment">Insira o comentário...</string>
+    <string name="insert_comment">Insira o comentário…</string>
     <string name="checked">Confirmado</string>
+    <string name="time_year_single">Há um ano</string>
+    <string name="time_year_plural">Há %d anos</string>
+    <string name="time_month_single">Há um mês</string>
+    <string name="time_month_plural">Há %d meses</string>
+    <string name="time_week_single">Há uma semana</string>
+    <string name="time_week_plural">Há %d semanas</string>
+    <string name="time_day_single">Há um dia</string>
+    <string name="time_day_plural">Há %d dias</string>
+    <string name="time_hour_single">Há uma hora</string>
+    <string name="time_hour_plural">Há %d horas</string>
+    <string name="time_hour_less">Há menos de uma hora</string>
 </resources>
